--- a/others.html
+++ b/others.html
@@ -31,6 +31,8 @@ header-img: "img/img100.jpg"
     <!--copied from markdown -->
 
     <blockquote><p>你在这里可以看到我的其他个人页面</p></blockquote>
+    
+    <p><a href="https://leetcode-cn.com/u/beiyi-2/">LEETCODE</a></p>
 
 
 </div>
