--- a/others.html
+++ b/others.html
@@ -38,7 +38,7 @@ header-img: "img/img100.jpg"
 
 <div class="zs post-container">
     
-<img src = "">
+<img src = "img/leetcode.jpg">
 <p><a href="https://leetcode-cn.com/u/beiyi-2/">LEETCODE</a></p>
 
 
