--- a/others.html
+++ b/others.html
@@ -38,13 +38,13 @@ header-img: "img/img100.jpg"
 
 <div class="zs post-container">
     
-    <img src = "https://github.com/lento-er/lento-er.github.io/blob/master/img/leetcode.jpg"><p><a href="https://leetcode-cn.com/u/beiyi-2/">LEETCODE</a></p>
+    <p><a href="https://leetcode-cn.com/u/beiyi-2/">LEETCODE</a></p>
 
-    
+</div>    
 
+<div>
 
-
-
+<p><a href="https://github.com/lento-er">GITHUB</a></p>
 
 
 </div>
