--- a/others.html
+++ b/others.html
@@ -42,7 +42,7 @@ header-img: "img/img100.jpg"
 
 </div>    
 
-<div>
+<div class="zt post-container">
 
 <p><a href="https://github.com/lento-er">GITHUB</a></p>
 
