--- a/others.html
+++ b/others.html
@@ -39,7 +39,7 @@ header-img: "img/img100.jpg"
 <div class="zs post-container">
     
     <p><a href="https://leetcode-cn.com/u/beiyi-2/">LEETCODE</a></p>
-    <a href="https://leetcode-cn.com/u/beiyi-2/"><img src="https://github.com/lento-er/lento-er.github.io/blob/master/img/leetcode.jpg" alt="LEETCODE"></a>
+    <a href="https://leetcode-cn.com/u/beiyi-2/"><img src="https://imgchr.com/i/UAuucQ" alt="LEETCODE"></a>
 
 </div>    
 
