--- a/others.html
+++ b/others.html
@@ -39,7 +39,8 @@ header-img: "img/img100.jpg"
 <div class="zs post-container">
     
     <p><a href="https://leetcode-cn.com/u/beiyi-2/">LEETCODE</a></p>
-    <a href="https://leetcode-cn.com/u/beiyi-2/"><img src="https://imgchr.com/i/UAuucQ" alt="LEETCODE"></a>
+  
+    <a href="https://leetcode-cn.com/u/beiyi-2/"><img src="https://s1.ax1x.com/2020/07/07/UAuucQ.png" alt="LEETCODE" width="100" heghit="100" /></a>
 
 </div>    
 
