--- a/others.html
+++ b/others.html
@@ -40,7 +40,7 @@ header-img: "img/img100.jpg"
     
     <p><a href="https://leetcode-cn.com/u/beiyi-2/">LEETCODE</a></p>
   
-    <p aligin="left"><a href="https://leetcode-cn.com/u/beiyi-2/"><img src="https://s1.ax1x.com/2020/07/07/UAuucQ.png" alt="LEETCODE" width="50" heghit="50" /></a></p>
+    <p><a href="https://leetcode-cn.com/u/beiyi-2/"><img src="https://s1.ax1x.com/2020/07/07/UAuucQ.png" alt="LEETCODE" width="50" heghit="50" /></a></p>
 
 </div>    
 
