--- a/others.html
+++ b/others.html
@@ -35,10 +35,7 @@ header-img: "img/img100.jpg"
     
 
 </div>
-<style> 
-zs post-container{width:100px;height:100px;border:1px solid #000;float:left} 
-/* css注释说明：float:left设置居左靠左 */ 
-</style> 
+
 
 <div class="zs post-container">
     
@@ -46,6 +43,9 @@ zs post-container{width:100px;height:100px;border:1px solid #000;float:left}
 <p><a href="https://leetcode-cn.com/u/beiyi-2/"><img src="https://s1.ax1x.com/2020/07/07/UAuucQ.png" alt="LEETCODE" width="50" heghit="50" /></a></p>
 
 </div>    
+
+<p>LEECODE</P><HR style="FILTER: alpha(opacity=100,finishopacity=0,style=1)" width="80%" color=#987cb9 SIZE=3>
+
 
 <div class="zt post-container">
 
