--- a/others.html
+++ b/others.html
@@ -40,7 +40,7 @@ header-img: "img/img100.jpg"
 <div class="zs post-container">
     
    
-<p><a href="https://leetcode-cn.com/u/beiyi-2/"><img src="https://s1.ax1x.com/2020/07/07/UAuucQ.png" alt="LEETCODE" width="50" heghit="50" /></a></p>
+<p><a href="https://leetcode-cn.com/u/beiyi-2/"><img src="https://s1.ax1x.com/2020/07/07/UAuucQ.png" alt="LEETCODE" width="80" heghit="80" /></a></p>
 
 </div>    
 
@@ -49,10 +49,14 @@ header-img: "img/img100.jpg"
 
 <div class="zt post-container">
 
-<p><a href="https://github.com/lento-er">GITHUB</a></p>
+<p><a href="https://github.com/lento-er"><img src="https://s1.ax1x.com/2020/07/07/UAYnIJ.jpg" alt="GITHUB" width="80" heghit="80" /></a></p>
 
 
 </div>
+
+<p>GITHUB</P><HR style="FILTER: alpha(opacity=100,finishopacity=0,style=1)" width="80%" color=#987cb9 SIZE=3>
+
+    
 
 
 
