--- a/others.html
+++ b/others.html
@@ -49,7 +49,7 @@ header-img: "img/img100.jpg"
 
 <div class="zt post-container">
 
-<p><a href="https://github.com/lento-er"><img src="https://s1.ax1x.com/2020/07/07/UAYnIJ.jpg" alt="GITHUB" width="80" heghit="80" /></a></p>
+<p><a href="https://github.com/lento-er"><img src="https://s1.ax1x.com/2020/07/07/UAYnIJ.jpg" alt="盖特" width="80" heghit="80" /></a></p>
 
 
 </div>
@@ -59,7 +59,7 @@ header-img: "img/img100.jpg"
 <div class="zcd">
     
     
-<p><a href="https://www.jianshu.com/"><img src="https://s1.ax1x.com/2020/07/07/UAthAe.th.jpg" alt="简书" width="80" heghit="80" /></a></p>
+<p><a href="https://www.jianshu.com/"><img src="https://s1.ax1x.com/2020/07/07/UAthAe.th.jpg" alt="简书" width="70" heghit="70" /></a></p>
 
 
 </div>
