--- a/about.html
+++ b/about.html
@@ -22,6 +22,8 @@ header-img: "img/img106.png"
     java，cpp的初级程序员，今年大一，在广州实习。</p>
 
     <p>休闲喜欢钢琴和小提琴，运动喜欢打网球，现在正努力靠近3.0的水平🙃</p>
+    
+    <p>梦想是有一台AE86，希望有一天能开着它帅气地漂移</p>
 
     <p>这是我的个人博客，我会偶尔发布我一段时间的学习总结，或者是生活日志</p>
     
